--- a/0주차/0팀/과제2_1주차내용정리.md
+++ b/0주차/0팀/과제2_1주차내용정리.md
@@ -12,7 +12,7 @@
 이를 이용하면 배열을 여러 개 선언했을 때, 각각의 배열 첫 칸 주소값을 저장해놨다가 꺼내 쓰는 것으로
 굳이 배열 이름을 호명하지 않고도 각 배열을 이용할 수 있을 것이다.
 
-> 3줄짜리 인상깊었던 내용
+> **꽉찬** 2줄짜리 인상깊었던 내용
 
 ### 느낀점
 포인터는 참 어렵다. 고급C는 얼마나 더 어려울까? 매우 두렵다
