--- a/0주차/0팀/과제2_1주차내용정리.md
+++ b/0주차/0팀/과제2_1주차내용정리.md
@@ -8,8 +8,7 @@
 > 5개의 문장
 
 ### 인상깊었던내용
-배열의 이름이 곧 주소임을 이용해서 반복문을 작성할 수 있다는 것이 신기했다.
-이를 이용하면 배열을 여러 개 선언했을 때, 각각의 배열 첫 칸 주소값을 저장해놨다가 꺼내 쓰는 것으로
+배열을 여러 개 선언했을 때, 각각의 배열 첫 칸 주소값을 저장해놨다가 꺼내 쓰는 것으로
 굳이 배열 이름을 호명하지 않고도 각 배열을 이용할 수 있을 것이다.
 추가적으로 알게 되었는데, 함수에 쓰일 매개변수로 배열을 넣을 수 있더라.
 이때, 1차원 배열이면 매개변수에 배열 이름만 적지만
