--- a/0주차/0팀/과제2_1주차내용정리.md
+++ b/0주차/0팀/과제2_1주차내용정리.md
@@ -17,8 +17,8 @@
 > 3줄짜리 인상깊었던 내용
 
 ### 느낀점
-포인터는 참 어렵다. 고급C는 얼마나 더 어려울까? 매우 두렵다
-예시로 보라고 써놓았는데, **생각해보니 파이썬 쓰는 스터디에 C 내용 써서 혼동을 불러일으키지는 않을까** 걱정된다
+포인터는 참 어렵다. 고급C는 얼마나 더 어려울까? 매우 두렵다.
+그리고 예시로 보라고 써놓았는데, **생각해보니 파이썬 쓰는 스터디에 C 내용 써서 혼동을 불러일으키지는 않을까** 걱정된다. 데분스 화이팅
 
 > 2줄의 느낀점. 볼드체는 무시해도 된다.
 
