--- a/0주차/6팀/1주차_과제3_홍길동.md
+++ b/0주차/6팀/1주차_과제3_홍길동.md
@@ -1,1 +1,1 @@
-예시를 보시려면 [0팀/1주차_과제3_홍길동.md]()를 열람해주세요
+예시를 보시려면 [0팀/1주차_과제3_홍길동.md](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/blob/main/0%EC%A3%BC%EC%B0%A8/0%ED%8C%80/1%EC%A3%BC%EC%B0%A8_%EA%B3%BC%EC%A0%9C3_%ED%99%8D%EA%B8%B8%EB%8F%99.md)를 열람해주세요
