--- a/0주차/4팀/0주차_이계무_과제2.md
+++ b/0주차/4팀/0주차_이계무_과제2.md
@@ -1,1 +1,109 @@
-ㅇ
+# 0주차 과제
+## 2.1 넘파이
+넘파이를 이용하여 데이터를 배열 형식으로 파이썬에서 저장하여 사용할 수 있다. 넘파이에서 고차원적인 기능을 제공해주진 않지만, 넘파이를 통해 배열에 대한 간단한 산술 연산과 인덱싱을 할 수 있다.   
+### 2.1.1 배열 생성
+```python
+import numpy as np
+```  
+* 일반적으로 numpy를 import할때는 약어인 np를 이용한다.
+```python
+data = [1,2,3,6,9]
+array = np.array(data)
+```
+* array() 함수를 이용하여 n차원의 배열을 생성할 수 있고, array().dtype을 통해 데이터타입을, array().shape를 통해 배열의 크기를 확인할 수 있다.
+* np.zeros()는 지정한 shape에 맞춰 0으로 배열을 채워 반환해주고, np.ones()는 1을 채워 반환해준다. np.arange()를 통해 지정한 범위의 숫자를 순차적으로 채울 수도 있다.
+
+> numpy의 배열은 python의 list보다 데이터 처리 속도와 메모리 소모에서 장점이 있음
+
+### 2.1.2 dtype 객체
+```python
+array_1 = np.array([1,3,5,7,9], dtype=np.float32)
+```
+* 기본적으로 dtype은 float64이지만, array함수 안에서 dtype을 지정하거나, astype을 통해 데이터타입을 변환할 수 있다.
+
+### 2.1.3 배열의 산술 연산
+* 여러개의 array를 만든 후, 행렬의 연산방식을 적용하여 연산이 가능하다. (*, - , /, ** 등)
+* 배열끼리의 비교연산(<, >)는 True, False를 반환한다.
+
+### 2.1.4 인덱싱과 슬라이싱
+```python
+# 1차원 배열
+array[7]
+# 7번 인덱스 값 반환
+array[7,9]
+# 7, 9번 인덱스 값 반환 (7~9 아니고 지정한 인덱스 값)
+array[4:9]
+# 4~9번 인덱스 값 반환
+```
+```python
+# 2차원 배열
+array[1]
+# 2행 반환
+array[1,2]
+# 2행 3열 값 반환 (1차원 배열에서 여러개 값을 반환해줬던 방식과 다름)
+array1[[0,1], :3]
+# 1행의 123번, 2행의 123번 반환
+```
+### 2.1.5 난수 생성하기
+* np.random()에서 난수와 관련한 여러 기능들을 사용할 수 있다.
+* seed()로 일정한 시드값을 지정할 수 있고, rand(), randn(), randint(), normal() 등을 사용해 여러가지 난수를 생성할 수 있다.
+* shuffle()을 이용해 값을 섞고, choice()를 통해 샘플링(무작위 추출)이 가능하다. replace=False를 이용하면 중복이 나오지 않는다.
+
+### 2.1.6 넘파이 주요 함수
+```python
+len() # 데이터의 총 개수
+mean() # 표본의 평균
+median() #중앙값 (데이터 총 개수가 짝수면 2개의 평균)
+std() # 표준편차
+var() # 표본분산
+min() # 최솟값
+max() # 최댓값
+sum() # 데이터 전체 합 계산
+cumsum() # 누적 합
+cumprod() # 누적 곱
+percentile(array,75) # 3사분위수 (데이터를 정렬했을때 75%에 위치하는 값)
+sort() #정렬
+```
+```python
+#불리언 관련
+(array > 0).sum() # True인 값의 개수를 sum하여 반환
+any() # True 1개 이상인지
+all() # 전체가 True인지
+```
+```python
+unique() #중복 값 없애고 반환
+intersect1d() # 교집합 반환
+union1d() # 합집합 반환
+setdiff1d(x,y) # x-y 차집합 반환
+setxor1d(x,y) # 대칭차집합 반환 (합집합-교집합)
+```
+
+## 판다스
+```python
+import pands as pd
+```
+* 주로 약어로 pd를 사용한다.
+
+### 2.2.1 데이터 기본구조
+* series와 dataframe이 있다.
+```python
+# Series
+pd.Series(data, index, name)
+# data에 index를 원하는 값으로 지정하여 name을 가지는 Series를 만들 수 있음.
+data = {'서울' : 70000, '부산':52000, '대전' :35000}
+pd.Series(data)
+# 딕셔너리를 Series로 만들면 index에 key값, data에 value가 들어감
+# name, values, tolist 등 사용 가능
+```
+```python
+# dataframe
+# 딕셔너리의 key값을 열의 index로 지정하고, 행의 index는 index 자체를 이용한다.
+```
+
+### 2.2.2 판다스 데이터 타입
+* object, string, int64, float64, bool, category, datetime64, timedelta 등이 있다.
+* 파이썬 내장 데이터타입, 넘파이 데이터타입, 판다스 데이터타입 간에 호환이 되는 것들을 차차 기억할 필요가 있음
+
+## 정리
+> 라이브러리의 기본적인 사용법을 잘 알고 있어야 데이터를 처리할 때 원활하게 진행할 수 있다.
+> 자주 사용하거나 실습하여 각종 함수들과 친숙해질 것.
