--- a/0주차/5팀/0주차_과제2_석민정.md
+++ b/0주차/5팀/0주차_과제2_석민정.md
@@ -15,11 +15,11 @@ _________________________________________
 + 데이터프레임: 세로 방향의 컬럼(=열)과 가로 방향의 로우(=행)로 구성된다. 각 컬럼에는 서로 다른 타입의 값이 들어갈 수 있으며 2차원 형태이다.
 + 데이터프레임을 시리즈가 담겨 있는 딕셔너리 형태라고 볼 수 있다.
 _________________________________________
-### 인상적인 코드&함수 3줄
+### 인상적인 코드&함수
 + arrange() 함수에 시작 값, 종료 값, 단계 값을 지정하여 생성할 수 있다는 점이 인상적이었다.
    ``` np. arrange(5, 30, 3) ```
 + 1개 행만 선택하여 슬라이싱할 때에는 대괄호를 사용하지 않고, 그냥 콜론만 사용하면 인덱스 전체를 선택하는 의미라는 것을 알게되었다.
 + 합칩합, 차집합, 대칭차집합 등을 모두 계산하여 구별해내고 이 값을 반환할 수 있다는 사실과 더불어서 시드값에 따라 난수를 생성하는 알고리즘이 정해지는 것이 신기했다.
 _________________________________________
-### 느낀점 2줄
+### 느낀점
 배열의 크기가 다른 경우의 연산은 브로드캐스팅이라고 하는데 이 책에서는 다루지 않았으므로 어떤 방식인지 궁금해졌다. 데이터 분석에 관해서는 생소하기에 앞으로 어떤 배움과 가르침을 얻을 수 있을지 기대되는 것 같다. 읽으면서 코드를 한눈에 볼 수 있으니 더욱 이해하기가 수월했던 것 같다.
