--- a/0주차/4팀/0주차_오승민_과제2.md
+++ b/0주차/4팀/0주차_오승민_과제2.md
@@ -11,7 +11,7 @@ data_l = [5, 9, 2.5, 3, 1]
 array_l = np.array(data_l)
 array_l
 ```
-* 배열을 생성하는 가장 간단 방법은 array() 함수를 활용하는 것이다.
+* 배열을 생성하는 가장 간단한 방법은 array() 함수를 활용하는 것이다.
 * 파이썬의 리스트처럼 순차형 객체를 넘겨받고, 넘겨받은 데이터를 포함한 새로운 넘파이 배열을 생성한다.
 
 ### 2.1.2 배열의 산술 연산
@@ -24,7 +24,7 @@ array_l - array_2
 1 / array_l
 array_2 ** 0.25
 ```
-* 넘파이 배열은 요소 간의 산술 연산을 효율적으로 수행하고 덧셈, 뺄셈, 곱셈, 나눗셈 등을 지원합니다
+* 넘파이 배열은 요소 간의 산술 연산을 효율적으로 수행하고 덧셈, 뺄셈, 곱셈, 나눗셈 등을 지원한다
 ### 2.1.3 인덱싱과 슬라이싱
 ```python
 array_ld = np.arange(15)
@@ -32,7 +32,7 @@ array_ld
 
 array([ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14])
 ```
-* 넘파이 배열을 인덱싱하고 슬라이싱하여 원하는 데이터에 접근할 수 있습니다.
+* 넘파이 배열을 인덱싱하고 슬라이싱하여 원하는 데이터에 접근할 수 있다.
 ```python
 array_ld[0]
 
@@ -42,13 +42,13 @@ array_ld[1:3]
 
 array([1, 2])
 ```
-* 예를 들어, array[0]은 첫 번째 요소를 가져오며, array[1:3]은 인덱스 1부터 2까지의 요소를 슬라이싱합니다.
+* 예를 들어, array[0]은 첫 번째 요소를 가져오며, array[1:3]은 인덱스 1부터 2까지의 요소를 슬라이싱한다.
 ### 2.1.4 난수 생성
 ```python
 np.random.seed(1000)
 ```
-* 넘파이는 난수 생성을 위한 다양한 함수를 제공합니다.
-* 보통 초기에 시드값을 정해놓는데 시드값에 따라 난수를 생성하는 알고리즘이 정해집니다.
+* 넘파이는 난수 생성을 위한 다양한 함수를 제공한다.
+* 보통 초기에 시드값을 정해놓는데 시드값에 따라 난수를 생성하는 알고리즘이 정해진다.
 ```python
 np.random.rand(10)
 np.random.randn(10)
@@ -62,7 +62,7 @@ array([-0.4122031 , -0.07400906, -0.92893693, 1.39006147, 1.19506933,
 
 array([9, 6, 2, 9, 5, 8, 5, 6, 9, 6, 7, 6, 3, 4, 8])
 ```
-* np.random.rand (), np.random.randn (), np.random.randint()를 사용하여 무작위 수를 생성할 수 있습니다.
+* np.random.rand (), np.random.randn (), np.random.randint()를 사용하여 무작위 수를 생성할 수 있다.
 *  rand () 함수를 활용한 함수는 균등분포로 실수 난수를 생성
 *  randn() 함수는 표준편차가 1이고 평균값이 0인 정규분포로 실수 난수를 생성
 *  randint() 함수는 정수 난수를 생성
@@ -76,17 +76,17 @@ setdiffId(x, y) # 배열 x와 y의 차집합을 반환
 setxorld(x, y) # 1 개의 배열에는 포함되지만 2개의 배열 모두에는 포함되지 않는 원소들의 집합인 대칭차집합을
 반환
 ```
-* 배열 집합 관련 함수는 주로 넘파이와 같은 라이브러리에서 제공됩니다.
-* 배열에 대한 다양한 집합 연산을 수행하는데 사용됩니다.
-* 이러한 함수들은 데이터 처리와 분석에서 매우 유용합니다.
+* 배열 집합 관련 함수는 주로 넘파이와 같은 라이브러리에서 제공된다.
+* 배열에 대한 다양한 집합 연산을 수행하는데 사용된다.
+* 이러한 함수들은 데이터 처리와 분석에서 매우 유용하다.
 ## 2.2 판다스
 ```python
 import pandas as pd
 ```
-* 판다스는 시리즈와 데이터프레임 두 가지 주요 데이터 구조를 제공합니다.
-* 시리즈는 1차원 데이터를 다루며, 데이터프레임은 2차원 테이블 형식의 데이터를 다룹니다.
-* 판다스를 사용하면 데이터를 쉽게 필터링, 그룹화, 정렬할 수 있으며, 결측값을 처리하고 데이터를 변환할 수 있습니다.
-* 데이터프레임을 통해 통계 분석, 그래프 작성 및 시각화를 수행할 수 있습니다.
+* 판다스는 시리즈와 데이터프레임 두 가지 주요 데이터 구조를 제공한다.
+* 시리즈는 1차원 데이터를 다루며, 데이터프레임은 2차원 테이블 형식의 데이터를 다룬다.
+* 판다스를 사용하면 데이터를 쉽게 필터링, 그룹화, 정렬할 수 있으며, 결측값을 처리하고 데이터를 변환할 수 있다.
+* 데이터프레임을 통해 통계 분석, 그래프 작성 및 시각화를 수행할 수 있다.
 ### 2.2.1 시리즈(Series)와 데이터프레임(DataFrame)
 * 시리즈 예시
 ```python
@@ -104,4 +104,4 @@ print(df)
 ```
 ## 느낀점
 넘파이와 판다스의 기능을 보면 데이터 처리와 분석에 매우 유용하다고 느꼈습니다.
-라이브러리와 그 안의 다양한 함수들과 친숙해질 필요가 있다는것을 느껏습니다.
+그리고 라이브러리와 그 안의 다양한 함수들과 친숙해질 필요가 있다는것을 느껏습니다.
