--- a/0주차/4팀/0주차_오승민_과제2.md
+++ b/0주차/4팀/0주차_오승민_과제2.md
@@ -10,6 +10,8 @@ import numpy as np
 data_l = [5, 9, 2.5, 3, 1]
 array_l = np.array(data_l)
 array_l
+
+array([5. , 9. , 2.5, 3. , 1. ])
 ```
 * 배열을 생성하는 가장 간단한 방법은 array() 함수를 활용하는 것이다.
 * 파이썬의 리스트처럼 순차형 객체를 넘겨받고, 넘겨받은 데이터를 포함한 새로운 넘파이 배열을 생성한다.
