--- a/0주차/4팀/0주차_오승민_과제2.md
+++ b/0주차/4팀/0주차_오승민_과제2.md
@@ -89,13 +89,18 @@ import pandas as pd
 * 시리즈는 1차원 데이터를 다루며, 데이터프레임은 2차원 테이블 형식의 데이터를 다룬다.
 * 판다스를 사용하면 데이터를 쉽게 필터링, 그룹화, 정렬할 수 있으며, 결측값을 처리하고 데이터를 변환할 수 있다.
 * 데이터프레임을 통해 통계 분석, 그래프 작성 및 시각화를 수행할 수 있다.
-### 2.2.1 시리즈(Series)와 데이터프레임(DataFrame)
+### 2.2.1 시리즈와 데이터프레임
 * 시리즈 예시
 ```python
 import pandas as pd
 data = {'이름': ['Alice', 'Bob', 'Charlie'], '점수': [85, 90, 78]}
 series = pd.Series(data)
 print(series)
+
+0      Alice
+1        Bob
+2    Charlie
+dtype: object
 ```
 * 데이터프레임 예시
 ```python
@@ -103,6 +108,11 @@ import pandas as pd
 data = {'이름': ['Alice', 'Bob', 'Charlie'], '점수': [85, 90, 78]}
 df = pd.DataFrame(data)
 print(df)
+
+       이름  점수
+0    Alice  85
+1      Bob  90
+2  Charlie  78
 ```
 ## 느낀점
 넘파이와 판다스의 기능을 보면 데이터 처리와 분석에 매우 유용하다고 느꼈습니다.
