--- a/0주차/3팀/0주차_조윤정_과제2.md
+++ b/0주차/3팀/0주차_조윤정_과제2.md
@@ -70,6 +70,11 @@ np.zeros(5)
 np.ones(2, 3, 5) #괄호 안에 크기
 ```
 ~~광기가 넘치는 코드~~
+초기값을 설정하는데 유용하게 쓰일 것 같다.
+
+>이 외에도 집합 관련 코드가 제일 인상깊었다. 파이썬 객체데이터에 대해 공부하면서
+필요한 부분만 딱딱 뽑아주는 함수가 있으면 편하겠다고 생각했었는데, 그 생각을
+고스란히 담고 있는 것이 numpy의 집합 관련 함수였다.
 
 느낀점
 ===
