--- a/0주차/3팀/0주차_조윤정_과제2.md
+++ b/0주차/3팀/0주차_조윤정_과제2.md
@@ -57,7 +57,7 @@ __시리즈__
 데이터이름 = pd.Series([1, 3, 6, 10])
 ```
 __데이터프레임__
->세로 방향 columns(열) + 가로 방향 갲(행)   
+>세로 방향 columns(열) + 가로 방향 row(행)   
 >각 컬럼엔 서로 다른 타입의 값이 들어갈 수 있다   
 >다양한 방법으로 dataframe을 생성할 수 있다
 
