--- a/0주차/5팀/0주차_과제3_조예림.md
+++ b/0주차/5팀/0주차_과제3_조예림.md
@@ -1,18 +1,18 @@
 #### Q4. 아래 시리즈를 보고 태경이와 경준이가 추가된 시리즈를 만들어보세요. 
 ##### 태경이의 value는 이름의 획 횟수이고 경준이는 결측값이 뜨도록 새로운 시리즈를 만들어주세요.
 ##### index 순서는 value가 큰 사람이 가장 먼저 나열되도록 합니다.
-###### (단, value가 같을 시 초성이 빠른 사람이 앞선다.)
+###### (단, value가 같을 시 초성이 빠른 사람이 앞서고 결측값을 갖은 사람은 value가 가장 작은 값으로 생각한다.)
 <img width="252" alt="데분스 1주차 문제1" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/6a883e19-5b89-450b-9a86-974dcb85b008"> 
 
 --------------------------------------------------------
 
 ##### 힌트 : 딕셔너리를 활용하시고, 인덱스 순서를 지정하여 아래와 같은 시리즈를 만들어보세요! 당신도 할 수 있답니당~!
-<img width="268" alt="데분스 2주차 문제2" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/6f36e78e-55d9-4d5d-a268-a798259b8c7b">
+<img width="283" alt="문제 수정 본" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/28af3a9c-14e3-41fd-a60e-5c29207b50f1">
 
 --------------------------------------------------------
 
 ##### 최후의 힌트 : 첫 시리즈 코드 공개!!
-<img width="449" alt="문제 1 답" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/80e31622-4562-4cd4-8e04-c68dec40d225">
+<img width="449" alt="문제 1 답" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/d24eef5c-2169-41c3-85bb-810d3ce8cd4e">
 
 -----------------------------------------------------------------
 
@@ -47,6 +47,7 @@
 ----------------------------------------------------------------------------------------
 
 
-##### 답! (고생하셨습니당 :) @0@/ )
+### 답! (고생하셨습니당 :) @0@/ )
 
-<img width="507" alt="문제2 답" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/83ecbd44-d7e7-4d21-afc8-1de9e248c7b9">
+<img width="500" alt="수정 문제 답" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/58674bec-b2b5-42a8-9eec-a28137d4ac9a">
+
