--- a/0주차/1팀/0주차_과제2_박광석.md
+++ b/0주차/1팀/0주차_과제2_박광석.md
@@ -260,3 +260,5 @@ columns에 기존에 없던 컬럼 이름을 입력하면 결측값으로 저장
 6. category
 7. datetime64
 8. timedelta[ns]
+# 느낀점
+암기해야되는 개념이 많아 힘들었고, 이걸 공부해서 어떻게 활용해야할지 고민이된다. 하지만 새롭게 배우는 내용이여서 흥미로웠다.
