--- a/0주차/5팀/0주차_과제2_김민성.md
+++ b/0주차/5팀/0주차_과제2_김민성.md
@@ -46,7 +46,7 @@ ser
 <br/>
 
 # 인상 깊었던 점
-Python week나 makers day 때 pandas나 numpy에 대해서 어느정도 유튜브를 통해서 알았지만 자세히 배워보니 파이썬에서 없어서는 안될 중요한 라이브러리들이며 많은 기능을 내포하고 있다는 것을 깨달았다. 
+Python week나 makers day 때 pandas나 numpy라는 함수가 존재한다는 사실은 알았지만 자세히 배워보니 파이썬에서 없어서는 안될 중요한 라이브러리들이며 많은 기능을 내포하고 있다는 것을 깨달았다. 
 특히 1, 0을 생성하는 ones()나 zeros() 함수부터 난수를 생성할 수 있는 rand(), randn() 함수들 등 다양한 기능이 있다는 사실이 매우 인상깊었다.
 
 <br/>
