--- a/0주차/5팀/0주차_과제2_김민성.md
+++ b/0주차/5팀/0주차_과제2_김민성.md
@@ -1,11 +1,11 @@
-# 2.1 넘파이 기본
+## 2.1 넘파이 기본
 넘파이는 파이썬에서 계산과 연산을 위한 가장 중요한 토대가 되는 필수 라이브러리다.
-## 임포트 방법
+### 임포트 방법
 ```python
 import numpy as np
 ```
 
-## 기본 배열 생성 : array()
+### 기본 배열 생성 : array()
 배열을 생성하는 가장 간단 방법은 array() 함수를 활용하는 것이다.
 ```python
 data_l = [5, 7, 2.5, 3.46, 1]
@@ -16,41 +16,41 @@ array_l
 array([5. , 7. , 2.5, 3.46, 1. ])
 ```
 
-## 리스트가 있음에도 넘파이를 사용하는 이유
+### 리스트가 있음에도 넘파이를 사용하는 이유
 리스트는 하나의 변수에 모든 값이 담긴 채로 처리되는데 그러한 경우 데이터 처리 속도가 매우 느려지고 메모리 낭비도 크다는 단점이 있다. 
 넘파이의 배열은 리스트와 달리 메모리 소모가 작고, 많은 데이터를 빠르게 처리한다.
 
 <br/>
 
-# 2.2 판다스 기본
+## 2.2 판다스 기본
 판다스는 파이썬 데이터 분석에 있어 가장 핵심적인 라이브러리이다. 
 특히 단일 산술 배열 데이터를 처리하는 데 특화되어 있는 넘파이와는 다르게 데이터베이스 스타일의 데이터나 다양한 타입의 데이터 위주
 로 처리를 한다.
 
-## 임포트 방법
+### 임포트 방법
 ```python
 import pandas as pd
 ```
-## 데이터 기본 구조
+### 데이터 기본 구조
 판다스는 2가지의 데이터 구조가 존재하는데, 바로 1) 시리즈와 2) 데이터프레임이다.
-### 1) 시리즈
+#### 1) 시리즈
 시리즈는 라벨이 있는 1차원 배열 구조다. 가장 간단하게 시리즈를 생성하는 방법은 Series() 함수에 배열 데이터를 담아서 작성하는 것이다.
 ```python
 ser = pd.Series([l ,3, 5, 7, 9])
 ser
 ```
-### 2) 데이터프레임
+#### 2) 데이터프레임
 데이터프레임은 세로 방향의 컬럼 (열)과 가로 방향의 로우(행)로 구성된다. 각 컬럼에는 서로 다른 타입의 값이 들어갈 수 있다. 데이터프레임 역시 시리즈처럼 컬럼과 로우에 인덱스를 갖고
 있다. 1차원 구조인 시리즈가 담겨 있기 때문에 2차원 형태로 생각하면 된다.
 
 <br/>
 
-# 인상 깊었던 점
+## 인상 깊었던 점
 Python week나 makers day 때 pandas나 numpy라는 함수가 존재한다는 사실은 알았지만 자세히 배워보니 파이썬에서 없어서는 안될 중요한 라이브러리들이며 많은 기능을 내포하고 있다는 것을 깨달았다. 
 특히 1, 0을 생성하는 ones()나 zeros() 함수부터 난수를 생성할 수 있는 rand(), randn() 함수들 등 다양한 기능이 있다는 사실이 매우 인상깊었다.
 
 <br/>
 
-# 느낀 점
+## 느낀 점
 어쩌다 데이터 분석 파이썬 편 책의 방대한 정보들을 보고 파이썬 하나만으로 정말 다양한 것들을 할 수 있겠구나라는 생각이 들었고,
 numpy 함수와 pandas 함수에 대해서 이번 수업을 통해서 잘 익혀나가야겠다는 생각을 하게 되었다.
