--- a/0주차/3팀/0주차_임시현_과제3.md
+++ b/0주차/3팀/0주차_임시현_과제3.md
@@ -4,7 +4,7 @@ kcal = [507,405,407,348,386,281,0]<br/>
 step = [14465,10595,10142,9720,9534,9080,41]<br/>
 dis_km = [10.4,7.8,7.6,6.7,7.1,6.2,0]
 
-### Q. 인덱스를 'mon','tue','wed','thu','fri','sat','sun'로 하고 'kcal','step', 'dis_km'를 컬럼으로 하는 데이터 프레임을 생성해보세요.
+### Q. 인덱스를 'mon','tue','wed','thu','fri','sat','sun'로 하고 'kcal','step', 'dis_km'를 컬럼명으로 하는 데이터 프레임을 생성해보세요.
 <br/><br/><br/><br/><br/><br/><br/><br/>
 ---
 ### HINT. 인덱스도 넘파이 배열로 만들어줘야겠죠?! 넘파이 배열로 시리즈를 생성한 후 시리즈를 여러 개 결합하여 df를 생성해보세요!
