--- a/0주차/4팀/0주차_정재석_과제3.md
+++ b/0주차/4팀/0주차_정재석_과제3.md
@@ -1,1 +1,27 @@
-
+## 기초문제입니다
+### Q1) 1학기 고급프로그래밍활용에서 random문제 기억나시나요? 그때 random을 사용하기위해서는 어떤말을 선언했죠? 그렇다면 우리 데분스에서 넘파이를 사용하기위해 선언되는 명령어는??
+### Q2) 파이썬의 리스트를 어떤함수를 사용하여 넘파이 배열로 만들죠!! 한번 실습해보세요!!
+```
+data_1 = [1,2,3,4,5]
+```
+### Q3) 넘파이의 대표적 함수중 하나죠 모든 배열의 값을 0, 1 로만들수있는 함수가있죠 한번 사용해 각각10개의 값을갖는 배열을 만들어주세요!!
+<br><br>
+<br><br>
+## 해설입니다
+### A1)
+```
+import numpy as np
+```
+### A2)
+```
+import numpy as np
+data_1 = [1,2,3,4,5]
+array_1 = np.array(data_1)
+array_1
+```
+### A3)
+```
+import numpy as np
+np.zeros(10)
+np.ones(10)
+'''
