--- a/0주차/2팀/0주차_과제3_박신영.md
+++ b/0주차/2팀/0주차_과제3_박신영.md
@@ -5,7 +5,7 @@ size=7의 난수(A)를 생성한다
 배열 A, B, C를 출력한다.
 
 **시드는 100으로 설정하고, 함수는 rand(), choice(), print()를 사용한다.
-* 마지막 A, B, C를 출력할 때에 앞에 "A =","B =","C ="도 함께 출력한다.
+* A, B, C를 출력할 때에 앞에 "A =","B =","C ="도 함께 출력한다.
 <br/><br/>
 
 <br/><br/>
