--- a/0주차/2팀/0주차_과제3_박신영.md
+++ b/0주차/2팀/0주차_과제3_박신영.md
@@ -1,7 +1,7 @@
-size=7의 난수(A)를 생성한다
+size=7의 난수(A)를 생성한다.
 인덱스 0번이 일요일, 1번이 월요일, ... , 6번이 토요일이라 하자
 인덱싱으로 주말(B), 슬라이싱으로 주중의 난수를 조회하고
-주중의 난수 중에 무작위로 3개의 난수(C)를 조회한다
+주중의 난수 중에 무작위로 3개의 난수(C)를 조회한다.
 배열 A, B, C를 출력한다.
 
 **시드는 100으로 설정하고, 함수는 rand(), choice(), print()를 사용한다.
