--- a/1주차/4팀/1주차_오승민_과제2.md
+++ b/1주차/4팀/1주차_오승민_과제2.md
@@ -230,4 +230,4 @@ df.reset_index(inplace=True) #  인덱스를 기존처럼 다시 되돌릴때
 df
 ```
 ## 정리
-새로운 데이터프레임을 다루는 다양한 기능들을 공부하고 사용해보아서 익숙해지도록 자주 접해보고 공부해봐야겟다.
+새로운 데이터프레임을 다루는 다양한 기능들을 공부하고 사용해보아서 아직은 낯설지만 익숙해지도록 자주 접해보고 공부해봐야겟다.
