--- a/1주차/4팀/1주차_이계무_과제3.md
+++ b/1주차/4팀/1주차_이계무_과제3.md
@@ -1,4 +1,6 @@
 # 1주차 문제
-
+<details>
+  문제
+</details>
 ## 정답
 https://colab.research.google.com/drive/19s6cJrxSs9pOF3hna-fbhUtkk-LbbudT?usp=sharing
