--- a/1주차/4팀/1주차_이계무_과제3.md
+++ b/1주차/4팀/1주차_이계무_과제3.md
@@ -1,6 +1,7 @@
 # 1주차 문제
-<details>
+<details><summary>
   문제
+</summary>
 </details>
 ## 정답
 https://colab.research.google.com/drive/19s6cJrxSs9pOF3hna-fbhUtkk-LbbudT?usp=sharing
