--- a/1주차/4팀/1주차_이계무_과제3.md
+++ b/1주차/4팀/1주차_이계무_과제3.md
@@ -1,7 +1,14 @@
 # 1주차 문제
-<details><summary>
-  문제
-</summary>
-</details>
-## 정답
+Seaborn 라이브러리는 책에서 나온 iris 데이터셋 외에도 많은 샘플 데이터셋을 제공합니다.    
+Seaborn 라이브러리의 모든 샘플 데이터셋의 종류를 출력하고,    
+그중 10번째인 비행기 탑승자 수 데이터셋(flights)을 데이터프레임으로 만들고,      
+7월의 탑승객 수 데이터프레임을 추출한 후 막대그래프로 만들어 연도별 비행기 탑승자 수의 경향성을 확인해보세요.
+
+### 힌트
+  1. 구글에 Seaborn sample datasets를 검색하면 Seaborn 공식문서의 seaborn.load_dataset() 함수에 대한 정보를 얻을 수 있다. 
+  2. get_dataset_names() 함수를 통하여 모든 데이터셋의 종류를 알아볼 수 있다.  
+  3. df.loc[]을 통하여 특정 인덱스에 접근할 수 있다.
+  4. sns.barplot() 함수를 통하여 막대그래프를 만들 수 있다. 데이터는 7월의 탑승객 수 데이터프레임, x축은 year, y축은 passengers이다. 
+          
+### 정답
 https://colab.research.google.com/drive/19s6cJrxSs9pOF3hna-fbhUtkk-LbbudT?usp=sharing
