--- a/1주차/1팀/1주차_한은결_과제3.md
+++ b/1주차/1팀/1주차_한은결_과제3.md
@@ -1,1 +1,33 @@
-d
+# 문제
+seaborn 라이브러리에 내장된 데이터 중 하나인 펭귄 데이터셋을 불러온 뒤 
+bill_length_mm, bill_depth_mm, filpper_length_mm  
+이 세 칼럼의 mm 기준으로 되어있는 값을 cm기준으로 변환해     
+bill_length_cm, bill_depth_cm, filpper_length_cm 라는 이름으로 새롭게 생성한 칼럼에 저장하라.    
+이후 펭귄의 종을 x축으로, filpper_length_cm을 y축으로 한 막대그래프를 생성하시오.  
+
+---
+# 정답
+seaborn 라이브러리에 내장된 펭귄 데이터셋을 불러오기
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/7eb79bf0-8147-402e-a85f-353c4976eaf3)
+
+---
+bill_length_cm, bill_depth_cm, filpper_length_cm 라는 새로운 칼럼 생성  
+
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/c41cad4c-b0a6-4684-9d52-61bd48e16c70)  
+
+추가된 칼럼 
+
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/68f8ff66-408f-4973-9cfc-fed6b1707e2a)
+
+---
+펭귄의 종을 x축으로, filpper_length_cm을 y축으로 한 막대그래프 생성
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/87092821-14cc-4abf-a8ff-31e8e9a908b1)
+
+
+
+
+
+
+
+
+
