--- a/1주차/1팀/1주차_한은결_과제 2.md
+++ b/1주차/1팀/1주차_한은결_과제 2.md
@@ -3,30 +3,71 @@
 ### 데이터 로드와 저장
 - 데이터 자체는 스스로 어떠한 타입이라는 정보를 포함하지 않기에  
 판다스의 데이터 로드 관련 함수들은 데이터 로드와 동시에 데이터 타입 추론 작업도 함께 진행
-- 사이킷런,텐서플로 등 과학 계산을 위한 대부분의 패키지가 넘파이의 배열 객체를 공통으로 사용  
-->넘파이가 대용량 데이터 배열을 효율적으로 처리할 수 있도록 설계되었기 때문
-- 넘파이의 배열은 리스트와 달리 메모리 소모가 작고, 많은 데이터를 빠르게 처리
-- 리스트는 서로 다른 타입의 값을 한 변수에 담을 수 있지만 배열은 담겨진 모든 값이 같은 타입이어야 함
-- 리스트는 데이터 수가 변경되지만 배열은 데이터 수 변경 불가
-- for문을 사용하지 않고도 데이터 처리 가능 -> 벡터화
+- 데이터 로드 시 데이터가 들어있는 경로와 파일 명을 주의할 것
+- header 부분을 none 으로 입력  
+  -> 원본 데이터에 헤더가 없으니 데이터의 1행을 헤더로 만들지 말라 요청
+- 결측값 여부 확인 -> isnull() 함수 사용
+- 문자열이 깨졌을 때  
+  -> encoding에 ‘cp949’, ‘utf-8', ‘e니c-kr’ 등의 인코딩 처리된 코덱 타입을 파악해 맞는 것으로 설정 
+
 ### 데이터 확인
-- 
-- 
-  * 
-- 
-  * 
-###데이터 프레임의 칼럼을 다루는 테크닉
-###데이터 인덱싱
- ## 2.코드&함수
-df = pd.read_csv('../datasets/example_l.csv')
-pd.read_table('.. /datasets/example_l.csv’, sep=',')
- 
- > csv 파일 로드 
- > 데이터가 쉼표로 구분되어 있기에 데이터 프레임 방식으로 불러옴
- > sep은 구분자를 의미하며 csv함수에서 구분자는 쉼표
-###
-> 
-###
-> 
->
+```
+df.head()
+df.tail()
+```
+- 순서대로 데이터의 앞부분과 뒷부분 확인
+- 코드 실행 시 데이터셋의 처음/마지막 5개 데이터 출력 -> 디폴트 값이 5
+- 괄호 안에 숫자 입력 시 해당 숫자 만큼의 데이터 출력
+---
+```
+df.count()
+df.max()
+df.min()
+df.mean()
+df.std()
+df.sum()
+```
+- 순서대로 데이터 수, 최댓값 출력, 최솟값, 평균갑, 표준편차,합계 출력
+### 데이터 프레임의 칼럼을 다루는 테크닉
+```
+df.columns 
+```
+데이터 셋에 어떤 칼럼이 있는지 전체 칼럼명을 확인할 때 사용
+
+--- 
+```
+df['species']
+df.species
+```
+위 두 함수 모두 단일 칼럼 호출 시 사용
+
+---
+```
+df['bill_depth_cm'] = df['bill_depth_mm'] / 10
+```
+```
+df.assign(
+bill_length_cm = df['bill_length_mm'] / 10, 
+biU_depth_cm = df[' bill_depth_mm' ] / 10
+)
+```
+- 첫번째 코드는 단일 컬럼 생성 예시
+- 두번째 함수는 다중 컬럼을 동시에 생성할 경우의 예시  
+  -> 칼럼 생성 코드를 괄호 안에 원하는 만큼 생성 가능
+- 컬럼 호출할 시에는 dfbill_depth_cm 형식이 가능하지만 생성 시에는 사용 불가
+---
+```
+catplot() // 합계 시각화
+barplot() // 평균값 시각화
+```
+### 데이터 인덱싱
+```
+set_index()
+//ex
+df.set_index('species', inplace=True)
+
+```
+특정 칼럼의 값으로 인덱스 생성
  ## 3.느낀점
+데이터 분석에 대해 이렇게까지 깊게 다뤄본 경험은 없었어서 내용을 이해하는데 어려움이 컸다.
+책 내용을 더욱 꼼꼼하게 공부해야겠다는 생각을 했다. 
