--- a/1주차/2팀/1주차_강지영_과제3.md
+++ b/1주차/2팀/1주차_강지영_과제3.md
@@ -4,7 +4,7 @@
 
 ![스크린샷(47)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128336150/22d420c6-fef4-4611-828c-02ddc073a707)
 
-위 데이터를 사용하여 1월부터 6월까지의 서울의 평균 기온을 계산하시오.
+나타난 데이터를 사용하여 1월부터 6월까지의 서울의 평균 기온 계산하기
 
 
 ## 답
