--- a/1주차/2팀/1주차_강지영_과제3.md
+++ b/1주차/2팀/1주차_강지영_과제3.md
@@ -16,6 +16,7 @@ data = pd.DataFrame({
     "월": ["1월", "2월", "3월", "4월", "5월", "6월"],
     "평균 기온": [2, 4, 10, 15, 20, 25]
 })
+
 average_temperature = data["평균 기온"].mean()
 
-print("1월부터 6월까지의 서울의 평균 기온은", average_temperature, "°C.")
+print("1월부터 6월까지의 서울의 평균 기온은", average_temperature, "°C")
