--- a/1주차/1팀/1주차_박광석_과제2.md
+++ b/1주차/1팀/1주차_박광석_과제2.md
@@ -241,8 +241,8 @@ df.rename(columns={"species":"펭귄 종류"})
 ```
 ## 2.5.7 컬럼 순서/위치 변경
 이 부분 이해못함 ㅠ
-## 2.5.8 컬럼과 인덱스 교환하기
-transpose() 또는 T 사용
+1. 컬럼명을 직접 입력
+2. 컬럼번호를 입력 용
 # 2.6 데이터 인덱싱(데이터프레임의 값 선택)
 ## 2.6.1 문자형 인덱스 인덱싱하기
 ```python
