--- a/1주차/1팀/1주차_박광석_과제2.md
+++ b/1주차/1팀/1주차_박광석_과제2.md
@@ -254,7 +254,7 @@ df.loc[] = 50 # 값 변경
 ```python
 df.iloc[[0]]
 ```
-## 2.6.3 컬럼을 익덱스로 만들기, 재정의하기
+## 2.6.3 컬럼을 인인덱스로 만들기, 재정의하기
 ```python
 df.reset_index(inplace=True)
 ```
