--- a/1주차/4팀/1주차_오승민_과제3.md
+++ b/1주차/4팀/1주차_오승민_과제3.md
@@ -6,7 +6,7 @@
 import pandas as pd
 import seaborn as sns # 시본 라이브러리를 임포트
 
-df = sns.load_dataset('penguin') # 시본의 내장 데이터셋 중 하나인 'penguin' 데이터셋을 불러옴
+df = sns.load_dataset('penguins') # 시본의 내장 데이터셋 중 하나인 'penguin' 데이터셋을 불러옴
 
 unique_species = df['species'].unique() # 데이터프레임에서 species열의 고유한(unique) 값들을 추출
 print(unique_species) # 고유한 펭귄 종류를 출력
