--- a/2주차/2팀/2주차_박신영_과제2(미완).md
+++ b/2주차/2팀/2주차_박신영_과제2(미완).md
@@ -1,5 +1,4 @@
 ```python
-
 import numpy as np
 import pandas as pd
 import seaborn as sns
@@ -75,6 +74,10 @@ titanic = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/datasets/titanic.c
 ## titanic.loc[::-1].head() -> 역순출력
 
 ## titanic.loc[::-1].reset_index().head() 역순을 정순으로 하는 DF로 변형... 머리터질거같음
-## 복습: set_index(컬럼명, inplace=ㅆ/)
+## 복습: set_index(컬럼명, inplace=T/F)는 컬럼 하나를 인덱스화 하는 함수
+## 복습: reset_index()는 인덱스 태초마을이야! 임의지정한 인덱스를 컬럼으로 빼버리고, 인덱스를 0부터의 정수로 초기화
+
+
+
 
 ```
