--- a/2주차/2팀/2주차_박신영_과제2(미완).md
+++ b/2주차/2팀/2주차_박신영_과제2(미완).md
@@ -77,7 +77,12 @@ titanic = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/datasets/titanic.c
 ## 복습: set_index(컬럼명, inplace=T/F)는 컬럼 하나를 인덱스화 하는 함수
 ## 복습: reset_index()는 인덱스 태초마을이야! 임의지정한 인덱스를 컬럼으로 빼버리고, 인덱스를 0부터의 정수로 초기화
 
-
+## titanic.loc[:,::-1].head()
+## 컬럼의 순서를 뒤바꿈
+## 콤마를 기준으로 행, 열이 나뉘는 것을 생각했을 때,
+## 전체 행에 대하여, 열을 역순으로 하여 호출하는 것이라고 볼 수 있다.
+## titanic.loc[::-1]의 경우, 보통 인덱스 칸에 콤마 구분이 없으면 우선 행에 대한 간섭이다.
+## 따라서 행의 역순 정렬이 되는 것. 따라서 콤마 뒤에 ::-1을 배치하면 열에 대한 간섭이 되는 것이다.
 
 
 ```
