--- a/2주차/3팀/2주차_임시현_과제2.md
+++ b/2주차/3팀/2주차_임시현_과제2.md
@@ -1,3 +1,4 @@
+# 내용 정리
 ![스크린샷(259)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/2ea39c4c-38f2-4ae3-977c-fc877e02208f)
 ![스크린샷(260)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/a41961d3-2795-4f8c-8333-a41aa5a6d2b0)
 ![스크린샷(261)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/443221f1-ffd8-4594-b721-f2d136f4e6bf)
@@ -9,3 +10,31 @@
 ![스크린샷(267)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/73aa9c19-bc78-47c4-ba7d-39b04efa4ae6)
 ![스크린샷(268)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/40d3f24f-aa4d-4051-aefb-94d75f884428)
 ![스크린샷(269)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/d10dc11e-e710-461e-b4c7-05c8da5f8d1a)
+![스크린샷(276)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/e246f315-d865-49ad-9524-84243d26f05c)
+![스크린샷(277)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/601b891f-deae-4364-b407-d8b1a77a193e)
+![스크린샷(278)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/3b2f8f63-ef3e-4d32-8c9b-2df41ae533ab)
+![스크린샷(279)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/496e87d0-c909-4a12-8f53-d7682fe26f24)
+![스크린샷(280)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/641b68a7-32ae-4c06-8d20-6c317e86cfc6)
+![스크린샷(281)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/c147bd35-9825-43e0-9357-ecb250f2eb37)
+![스크린샷(282)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/f77265c8-586c-4ec5-bf98-794e00a75efe)
+![스크린샷(283)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/c148fec8-786c-45b3-9e9f-58a233da6f4f)
+![스크린샷(284)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/10e2fc6b-824c-42fd-8247-5355c527958e)
+![스크린샷(285)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/6085d654-753c-4af7-84b2-c2c7b237e1c4)
+![스크린샷(286)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/9dde3e00-cedd-487e-bd33-0af453f3b62d)
+![스크린샷(287)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/95096a36-303c-4f86-b271-c03ff6474f88)
+![스크린샷(288)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/5920a7a0-a8fb-4541-826b-171fdae97fbe)
+![스크린샷(289)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/48233d81-e3db-4d03-bc1c-7adc4f898161)
+![스크린샷(290)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/013f84ac-9ca5-4ad8-abf7-bf6dc50fcc1b)
+![스크린샷(291)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/a5189a25-e2ac-46b2-bac1-b0732db588bf)
+![스크린샷(292)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/c3114f45-17ad-4b04-9e4b-b9b6d1cebe44)
+![스크린샷(293)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/ee77e9ee-2783-4c4b-bea2-d1a8852727bf)
+![스크린샷(294)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/d43f581a-0054-4e3d-aca2-f5079dde49d0)
+![스크린샷(295)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/628dc2b3-bc01-48ea-b565-e1d61aa1b753)
+![스크린샷(296)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/c3a75759-b005-476d-ae3f-5343ab70481e)
+![스크린샷(297)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/3659ffd9-5b90-4b0d-9081-2a4ba79afb59)
+![스크린샷(298)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/7eac57d9-c250-48df-965a-9ad06340e46b)
+![스크린샷(299)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/714ce40f-6849-4b9f-a4d7-5fee9dcd19bc)
+![스크린샷(300)](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/3efd339c-1a61-425f-89cb-752ec8ba4f71)
+
+# 인상 깊은 코드 및 느낀점
+결측값이 있을 경우 삭제하거나 채워넣을 수 있는데, 이때 채워 넣는 방법으로는 숫자 지정하기, 평균값 넣기, 자동으로 보간하기 등이 있었는데 실제 데이터셋을 이용해서 결측값을 처리하는 앞의 방법들을 모두 사용해봐서 재밌었다. 그리고 공부를 하다보면 앞에서 공부한 도구와 관련된 내용이 나오는데 그럴때 앞에서 배웠던 다른 코드로 했을 때 같은 결과가 출력되는 점이 뿌듯했다. 그 예로는 컬럼 값을 삭제할 때 책에서는 axis='columns'를 사용하는데 나는 앞에서 썼던 axis=1을 사용했다. ㅎㅎ 
