--- a/2주차/2팀/2주차_박신영_과제2(미완).md
+++ b/2주차/2팀/2주차_박신영_과제2(미완).md
@@ -1,88 +1,99 @@
+> 시작에 앞서, 전반적인 전제 제시
 ```python
 import numpy as np
 import pandas as pd
 import seaborn as sns
+import matplotlib as plt
 
-titanic = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/datasets/titanic.csv')
+titanic = pd.read_csv("../datasets/titanic.csv")
+## 타이타닉 csv 파일을 예시로 배우게 됨
+```
 
-## titanic[(titanic.Pclass == 3) & (titanic.Sex != "female")].head()
-## 함수 대신 조건식 이용하기
+## [내용 정리]
+```python
+# 3.1 데이터 필터링과 정렬 테크닉
 
-## titanic.loc[titanic.Fare > 300, :]
-## titanic.iloc[list(titanic.Fare > 300)]
-## 후자의 경우에 Fare값을 리스트화 한 후에 행별 조회를 한다는 거라면
-## 어떻게 데이터프레임의 형태로 출력하지...? 뭘까
+## 데이터프레임의 인덱스에 조건식 삽입 or loc, iloc 함수 적용
+## loc, iloc도 조건식을 필요로 하므로 유사함
+## isin 함수 적용하여 원하는 값이 존재하는 행 조회
+## 인덱스 맨 앞에 '~'를 붙이면 인덱스에 쓰인 값 외의 것을 조회
+## query 함수 사용 시, 매개변수에 변수명 없이 바로 함수 적용
 
+## notnull() 결측값이 아닌 값을 가진 행 출력
+## str.contains("찾고자 하는 단어") 함수 적용하여 문자 필터링
+
+## 차순 정렬. 정렬의 기준이 될 컬럼과, 정렬의 형태를 정하여 필터링
+## 역순 정렬. 인덱스에 ::-1을 삽입하여 적용
+
+
+
+# 결측값 처리
+
+## 결측값 시각화. 맷플롯립을 사용하기 시작함. 맷플롯립을 호출하여 그래프 크기를 정하고
+## 시본의 heatmap 함수를 호출하는데, 매개변수로 titanic.isnull() 함수를 삽입하여
+## 결측값 분포를 나타내는 그래프를 그린다.
+
+## titanic.info(), isna().sum(), isnull().sum() 등을 이용하여 각 컬럼별 원소 개수를 센다.
+## 원소 개수와 기존 데이터 프레임 사이즈의 차이가 결측값의 개수이다.
+## Tip. isna()가 결측값 판별이라면 notna()는 관측값 판별이다.
+
+## 결측값 제거. dropna() 함수가 주로 쓰임.
+## 결측값 포함된 행 제거: titanic.dropna() 기준이 로우로 지정되어 있음.
+''' 조심스레 함수 원형을 예측해볼 수 있음.
+    def dropna(axis="rows"): ~~
+'''
+## 결측값 포함된 열 제거: titanic.dropna(axis="columns") axis(기준)를 컬럼으로 지정함.
+## 매개변수로 how="/방식", thresh="/결측값 개수 제한", subset="컬럼명" 등을 사용해
+## 그에 맞는 방식으로 결측값 선별 및 처리함.
+
+""" Tip. 매개변수에 inplace=True를 삽입할 경우 원본 데이터 자체를 수정함
 """
- titanic.loc[
-    (titanic.Fare > 240) & (titanic.Sex == "female"), ## 조건
-    ["Name","Age","Fare","Embarked"]                  ## 인덱싱(컬럼에 관한)
-]
+
+## 결측값 대체/보간. fillna() 함수가 주로 쓰임.
+## fillna(value): 결측값을 value로 대신 채워넣음.
+## replace(to_replace=np.nan,value=값): to_replace값을 빼고, 그 자리를 value로 대체함.
+## fillna(값을 반환하는 조건식) 꼴로 활용할 수도 있음
+
+## 매개변수 method는 ffill, bfill, linear, pad 등이 사용될 수 있다.
+## ffill, bfill의 경우는 결측값 자리를 이전, 다음 행과 같은 값으로 대체한다.
+## linear의 경우는 전후의 평균값을, pad의 경우는 limit_direction 변수에 따라 ffill, bfill의 역할을 수행할 수 있다.
+## method를 사용하는 경우는 대체로 연속성이 있는 데이터에 대하여서 사용하는 것이 좋다.
+
+
+
+# 이상값 처리. IQR 기법 사용
+
+## 결측값이 텅 빈 상태를 의미한다면, 이상값은 주변 값과는 경향이 매우 다른 생뚱맞은 값이다.
+## 함수 정의
+"""
+def outlier_iqr(data,column):
+  global lower, upper     # 하한, 상한
+  q1, q3 = np.quantile(data[column],0.25),np.quantile(data[column],0.75)
+                          # 1/4지점, 3/4지점 지정
+  iqr = q3 - q1           # 3/4지점 - 1/4지점 = iqr
+  cut_off = iqr * 1.5
+  lower, upper = q1 - cut_off, q3 + cut_off   # 하한, 상한
+  print("IQR은",iqr,"이다.")
+  print("lower 기준값은",lower,"이다.")
+  print("upper 기준값은",upper,"이다.")
+  data1 = data[data[column]>upper]            # 상한보다 큰 값
+  data2 = data[data[column]<lower]            # 하한보다 작은 값
+  return print("총 이상값 개수는",data1.shape[0] + data2.shape[0],"이다.")
+
+  ## shape() 함수는 데이터셋의 사이즈를 (N, M) 꼴의 튜플로 반환함.
+  ## 그 튜플의 0번 인덱스는 행의 사이즈를 의미하므로 이를 활용해 이상값 개수를 반환한 것.
+
+  # python에서의 global은 C언어에서의 static과 같은 기능인듯함.
 """
 
+## 결측값에는 이상값 함수가 적용되지 않으므로 결측값 처리를 거친 후 이상값 처리를 하는 것이 순서.
+## 탐지된 이상값의 범위 시각화
+## 맷플롯립으로는 그래프의 사이즈를, 시본으로는 히스토그램을 생성한다.
+## 맷플롯립에서 axvspan()함수를 이용하여 상한부터 하한까지를 칠하여 이상값 영역을 시각화한다.
 
-## titanic[titanic.Embarked.isin(["S","C"])].head()
-## titanic[~titanic.Embarked.isin(["S","C"])].head() "~"을 앞에 붙이면 여집합 호출
-## is in 이니까 안에 들어있는 것 지정해서 호출하는 거랍니다. 늘 이름이 직관적이야...
-## 토막상식! embark는 "(운송수단에) 태우다"라는 뜻의 영단어랍니다
-## "~" 물결 표시는 틸데 기호라고 칭한다네요~~
-
-## .query("조건")
-## titanic.query("Pclass == [1,2] & Fare > 270")
-## 쿼리 함수로 조금 더 직관적인 호출이 가능. 컬럼명만 사용하게 됨
+## 이후 상한과 하한을 
 
 
-
-## titanic_notnull = titanic[titanic.Cabin.notnull()]
-## titanic_notnull.head()
-## 하하 또 직관적인 이름입니다. null(결측값) 아닌것들 호출하라는 함수죠 뭐..
-
-
-## titanic[titanic["Name"].str.contains("Catherine")].head()
-## DF명   [   컬럼지정    문자형      필터링        ]
-## DF를 조회할건데, DF에서 Name 컬럼에서 문자형으로 캐서린이 포함된 행의 인덱스
-## DF에서 열의 주소를 정하여, 해당 열에서만 조회하여 원하는 조건에 맞는 행의
-## 인덱스를 반환한다. 그 반환값이 다시 가장 밖의 DF 행 반환 함수에 걸린다.
-## 모든 필터링을 마친 DF의 특정 행 주소가 반환되어, 그 행을 출력한다.
-## 대충 이런 구조인 듯함..
-
-
-
-# 차순정렬
-
-## titanic.sort_values(by=["Fare"],ascending=False).head(5)
-## DF에서 특정값 분류, 기준: Fare라는 열, 오름차순이 거짓 즉 내림차순 정렬
-## 토막상식!: ascend(오르다)ing: 오름차순 descend(내리다)ing: 내림차순
-## 다만 함수에서 descending이라는 워딩은 사용하지 않음. 에러납니다
-## titanic.sort_values(by=["Fare","Age"],ascending=False).head(5)
-## Fare에 의해 우선정렬 후, Fare가 같은 행끼리는 Age에 의해 재정렬
-
-## titanic[titanic.Sex == "female"].nlargest(n=10,columns="Age")
-## DF에서 Sex가 female인 행을 가져다가, 총 10개까지 Age값이 큰 순서대로 정렬, 조회
-## 반대: nsmallest(조건식)
-## .sort_index(): 인덱스 오름차순으로 정렬
-## titanic[titanic.Sex == "female"].nlargest(n=10,columns="Age").sort_index()
-## 위의 경우, 순서대로 함수적용이 되므로, nlargest에 의해 정렬된 순서가,
-## sort_index에 의해 최종 정렬되므로 정렬 효력은 사라짐. 그냥 10개 뽑은거 됨.
-
-
-
-# 역순정렬
-
-## titanic.loc[:].head() -> 정순출력
-## titanic.loc[::].head() -> 정순출력. 위랑 차이X
-## titanic.loc[::-1].head() -> 역순출력
-
-## titanic.loc[::-1].reset_index().head() 역순을 정순으로 하는 DF로 변형... 머리터질거같음
-## 복습: set_index(컬럼명, inplace=T/F)는 컬럼 하나를 인덱스화 하는 함수
-## 복습: reset_index()는 인덱스 태초마을이야! 임의지정한 인덱스를 컬럼으로 빼버리고, 인덱스를 0부터의 정수로 초기화
-
-## titanic.loc[:,::-1].head()
-## 컬럼의 순서를 뒤바꿈
-## 콤마를 기준으로 행, 열이 나뉘는 것을 생각했을 때,
-## 전체 행에 대하여, 열을 역순으로 하여 호출하는 것이라고 볼 수 있다.
-## titanic.loc[::-1]의 경우, 보통 인덱스 칸에 콤마 구분이 없으면 우선 행에 대한 간섭이다.
-## 따라서 행의 역순 정렬이 되는 것. 따라서 콤마 뒤에 ::-1을 배치하면 열에 대한 간섭이 되는 것이다.
 
 
 ```
