--- a/2주차/2팀/2주차_박신영_과제2(미완).md
+++ b/2주차/2팀/2주차_박신영_과제2(미완).md
@@ -27,7 +27,7 @@ titanic = pd.read_csv("../datasets/titanic.csv")
 
 
 
-# 결측값 처리
+# 3.2 결측값 처리
 
 ## 결측값 시각화. 맷플롯립을 사용하기 시작함. 맷플롯립을 호출하여 그래프 크기를 정하고
 ## 시본의 heatmap 함수를 호출하는데, 매개변수로 titanic.isnull() 함수를 삽입하여
@@ -61,7 +61,7 @@ titanic = pd.read_csv("../datasets/titanic.csv")
 
 
 
-# 이상값 처리. IQR 기법 사용
+# 3.3 이상값 처리. IQR 기법 사용
 
 ## 결측값이 텅 빈 상태를 의미한다면, 이상값은 주변 값과는 경향이 매우 다른 생뚱맞은 값이다.
 ## 함수 정의
@@ -91,9 +91,24 @@ def outlier_iqr(data,column):
 ## 맷플롯립으로는 그래프의 사이즈를, 시본으로는 히스토그램을 생성한다.
 ## 맷플롯립에서 axvspan()함수를 이용하여 상한부터 하한까지를 칠하여 이상값 영역을 시각화한다.
 
-## 이후 상한과 하한을 
-
-
-
+## 이후 상한과 하한을 활용하여 이상값을 제거/대체하면 되겠다.
+## 제거/대체는 데이터 필터링 및 정렬 테크닉에서 배운대로 진행한다.
 
 ```
+
+
+## [주요 함수]
+1. titanic.str.contains("Keyword"): 검색 엔진의 기본적인 원리가 이와 같지 않을까? 검색 기능은 개발자가 아닌 사용자로 하여금 시스템을 효과적으로 이용할 수 있게 만든다. 앞으로 앱/웹 개발을 하게 된다면 충분한 가치를 지닌 함수라고 생각한다.
+2. dropna(), fillna(): 각각 결측값 제거/보간의 역할을 수행하는 대표 함수이다. 오류를 줄이기 위해 결측값은 처리해야만 하고, 그 기본이 되는 함수라고 생각한다. 오히려 자세히 알아두어야 할 것은 각 함수의 매개변수로써 쓰이는 변수들의 사용법을 잘 알아두는 것이다. 왜냐하면, 예로 dropna(subset="컬럼명")은 지정된 컬럼에서만 결측값을 제거하고, fillna(method="linear",limit_direction="forward")는 결측값을 주변값과 경향이 비슷한 어떤 값으로 대체하는데, 이렇게 세세한 내용이 유용하기 때문이다.
+3. outlier_iqr(data,column): 이상값 처리를 위해 새로 정의한 함수. 이상값 처리를 진행함에 있어서 중요한 역할을 한다고 생각한다. 개인적으로 이 함수보다는 이 함수의 목적인 iqr 값 계산을 잘 숙지함이 더 중요하다고 생각한다.
+   - iqr: 3/4분위 - 1/4분위
+   - 하한: 1/4분위 - 1.5 iqr
+   - 상한: 3/4분위 + 1.5 iqr
+
+
+## [느낀 점]
+- 지난 주에 데이터프레임을 구성하고 활용하는 것에 대해 배웠다면, 이번에는 그 안에서 어떠한 값들을 처리하는 것을 배워서 비교적 쉽고 직관적이었다.
+- 결측값은 처리해야 한다고 생각했었지만 이상값이라는 개념, 처리에 대해 새롭게 알게 되어서 좋다.
+- 1, 2주차 때 내용을 완전히 이해하지 못했지만 그 내용들이 반복적으로 뒷내용에도 나와서 자연스레 이해가 되어서 좋다. 물론 그만큼 중요한 기본기이기 때문에 복습은 필수일 듯하다.
+
+
