--- a/2주차/2팀/2주차_박신영_과제2.md
+++ b/2주차/2팀/2주차_박신영_과제2.md
@@ -54,6 +54,7 @@ titanic = pd.read_csv("../datasets/titanic.csv")
 ## replace(to_replace=np.nan,value=값): to_replace값을 빼고, 그 자리를 value로 대체함.
 ## fillna(값을 반환하는 조건식) 꼴로 활용할 수도 있음
 
+## interpolate()를 사용할 경우
 ## 매개변수 method는 ffill, bfill, linear, pad 등이 사용될 수 있다.
 ## ffill, bfill의 경우는 결측값 자리를 이전, 다음 행과 같은 값으로 대체한다.
 ## linear의 경우는 전후의 평균값을, pad의 경우는 limit_direction 변수에 따라 ffill, bfill의 역할을 수행할 수 있다.
