--- a/2주차/2팀/2주차_박신영_과제2.md
+++ b/2주차/2팀/2주차_박신영_과제2.md
@@ -100,7 +100,7 @@ def outlier_iqr(data,column):
 
 ## [주요 함수]
 1. titanic.str.contains("Keyword"): 검색 엔진의 기본적인 원리가 이와 같지 않을까? 검색 기능은 개발자가 아닌 사용자로 하여금 시스템을 효과적으로 이용할 수 있게 만든다. 앞으로 앱/웹 개발을 하게 된다면 충분한 가치를 지닌 함수라고 생각한다.
-2. dropna(), fillna(): 각각 결측값 제거/보간의 역할을 수행하는 대표 함수이다. 오류를 줄이기 위해 결측값은 처리해야만 하고, 그 기본이 되는 함수라고 생각한다. 오히려 자세히 알아두어야 할 것은 각 함수의 매개변수로써 쓰이는 변수들의 사용법을 잘 알아두는 것이다. 왜냐하면, 예로 dropna(subset="컬럼명")은 지정된 컬럼에서만 결측값을 제거하고, fillna(method="linear",limit_direction="forward")는 결측값을 주변값과 경향이 비슷한 어떤 값으로 대체하는데, 이렇게 세세한 내용이 유용하기 때문이다.
+2. dropna(), fillna(), interpolate(): 각각 결측값 제거/보간의 역할을 수행하는 대표 함수이다. 오류를 줄이기 위해 결측값은 처리해야만 하고, 그 기본이 되는 함수라고 생각한다. 오히려 자세히 알아두어야 할 것은 각 함수의 매개변수로써 쓰이는 변수들의 사용법을 잘 알아두는 것이다. 왜냐하면, 예로 dropna(subset="컬럼명")은 지정된 컬럼에서만 결측값을 제거하고, interpolate(method="linear",limit_direction="forward")는 결측값을 주변값과 경향이 비슷한 어떤 값으로 대체하는데, 이렇게 세세한 내용이 유용하기 때문이다.
 3. outlier_iqr(data,column): 이상값 처리를 위해 새로 정의한 함수. 이상값 처리를 진행함에 있어서 중요한 역할을 한다고 생각한다. 개인적으로 이 함수보다는 이 함수의 목적인 iqr 값 계산을 잘 숙지함이 더 중요하다고 생각한다.
    - iqr: 3/4분위 - 1/4분위
    - 하한: 1/4분위 - 1.5 iqr
