--- a/2주차/1팀/2주차_박광석_과제2.md
+++ b/2주차/1팀/2주차_박광석_과제2.md
@@ -1,4 +1,4 @@
-# 3.1 데이터 필터링과 정렬 테크닉
+ # 3.1 데이터 필터링과 정렬 테크닉
 ## 3.1.1 조건식을 활용한 데이터 필터링
 ### 단일 조건식을 활용하여 데이터 필터링하기
 ```python
@@ -68,62 +68,18 @@ titanic.sort_values(by=['컬럼명'], ascending=False).head()
 ascending 이 False 이면 내림차순 정렬\
 컬럼명을 여러 개 입력하면 왼쪽에 입력한 컬럼이 우선 정렬 대상이다.
 ### nlargest() : 내림차순, nsmallest() : 오름차
-Age 컬럼을 기준으로 값이 가장 큰 10개 데이터를 추출
-```python
-titanic[titanic.Sex == 'female'].nlargest(n = 10, columns='Age')
-```
-## 3.1.8 데이터 순서 역수능로 병경하기
-::-1 을 입력
-```python
-titanic.loc[::-1].head()
-```
-reset_index() 함수를 적용
-# 3.2 결측값 처리
-```python
-import pandas as pd
-import numpy as np
-import matplotlib.pyplot as plt
-import seaborn as sns
-```
-## 3.2.2 결측값 시각화
-```python
-plt.figure(figsize=(12, 7))               # 그래프의 출력 사이즈를 12 x 7 사이즈로 지정
-sns.heatmap(titanic.isnull(), cbar=False) # isnull 함수를 통해 결측값 있는 부분만 활성화해서 보여주는 목적
-```
-missingno 라이브러리의 matrix함수 활용
-```python
-!pip install missingno
-import missingno as msno
-msno.matrix(titanic)
-```
-## 3.2.4 결측값 삭제
-```python
-titanic.dropna()
-```
-axis='rows' 가 기본값
-### 모든 컬럼에서 결측값의 개수가 특정 수치를 넘어가는 행만 삭제하기
-1. how
-2. thresh = 2 -> 2개 이상의 컬럼에 결측값이 존재하는 데이터는 삭제하라는 의미
-3. 매개변수subset 활용
-   ```python
-   titanic.dropna(subset=['Age', 'Embarked'])
-   ```
-## 3.2.5 결측값 대체/보간
-1. fillna : 결측값을 채우기
-2. replace 사용
-   ```python
-   titanic.Age.replace(to_replace = np.nan, value = 25)
-   ```
-
-### 평균값으로 결측값 채우기
-mean 함수 사용
-### 결측값의 전후 값 참조해서 채우기
-1. ffill : 앞에 있는 값을 참조
-2. bfill : 뒤에 있는 값을 참조
-```python
-titanic.Cabin.fillna(method="ffill")
-```
-### 보간법으로 결측값 채우기
-자동으로 보간을 해주는 함수 : interpolation()
-# 3.3 이상값 처리
+Age 컬럼을 기준으기
+IQR 기법중
 ## 3.3.2 이상값 시각화하기
+1개 변수에 관한 이상값 시각화 도구는 박스플롯, 히스토그램\
+2개 변수 간의 이상값은 산점도를 이용.
+그림에서 최대와 최소 범위를 벗어난 값이 이상값이다.
+```python
+sns.set_theme(style="whitegrid")
+plt.figure(figsize=(12, 4))
+sns.boxplot(x=titanic.Fare);
+```
+## 3.3.3 IQR 기법으로 이상값 확인하기
+1. 1사분위수 Q1 찾기
+2. 3사분위수 Q3 찾기
+3. IQR 계산 IQR = Q3 - Q1
