--- a/2주차/2팀/2주차_박신영_과제3.md
+++ b/2주차/2팀/2주차_박신영_과제3.md
@@ -13,13 +13,13 @@
 빵빵이는 라면 이름을 기억하지 못하지만, 베이컨이 들어갔던 것은 기억합니다.
 
 
-**문제 1.** **추가 재료(Additions)** 로 **베이컨(Bacon)** 이 들어간 라면의 레시피를 찾아주세요.(단, 코드에 Bacon을 사용해야 함)
+### **문제 1.** **추가 재료(Additions)** 로 **베이컨(Bacon)** 이 들어간 라면의 레시피를 찾아주세요.(단, 코드에 Bacon을 사용해야 함)
 
 
 그런데 이런, 레시피에 물 양이 어떻게 되는지가 누락되어 있네요.
 
 
-**문제 2.** 라면의 기본은 물 조절! 빵빵이가 맛있게 먹을 수 있게 **적절한 물 양**을 찾아주세요.(단, 임의로 정해서는 안 됨)
+### **문제 2.** 라면의 기본은 물 조절! 빵빵이가 맛있게 먹을 수 있게 **적절한 물 양**을 찾아주세요.(단, 임의로 정해서는 안 됨)
 
 
 (아래의 데이터프레임 코드를 복사 붙어넣기하여 진행하시면 됩니다.)
