--- a/2주차/2팀/2주차_박신영_과제3.md
+++ b/2주차/2팀/2주차_박신영_과제3.md
@@ -25,6 +25,12 @@
 (아래의 데이터프레임 코드를 복사 붙어넣기하여 진행하시면 됩니다.)
 
 
+(아래의 데이터프레임 코드를 복사 붙어넣기하여 진행하시면 됩니다.)
+
+
+(아래의 데이터프레임 코드를 복사 붙어넣기하여 진행하시면 됩니다.)
+
+
 ```python
 
 import numpy as np
