--- a/2주차/2팀/2주차_박신영_과제3.md
+++ b/2주차/2팀/2주차_박신영_과제3.md
@@ -38,7 +38,7 @@ import pandas as pd
 
 ramen_recipe = {"Menu":["Basic","SinToowoomba","RamenJeon","Tantanmen"],
                 "Water":[550,np.NaN,500,500],
-                "Additions":["Nothing","Bacon, Onion, Mushroom, Whipping Cream",np.NaN,"Peanut Butter"],
+                "Additions":["Nothing","Bacon, Onion, Mushroom, Whipping Cream","Cooking Oil","Peanut Butter"],
                 "Chef":["Paikjongwon","Sungsikyung","Paikjongwon","Paikjongwon"]}
 ramens = pd.DataFrame(ramen_recipe).set_index("Menu")
 
