--- a/2주차/1팀/2주차_박광석_과제3.md
+++ b/2주차/1팀/2주차_박광석_과제3.md
@@ -26,8 +26,10 @@
 \
 \
 광석 답 : \
+```python
 import pandas as pd
 import seaborn as sns
 penguin = sns.load_dataset('penguins')
 
 penguin.query('sex == "Female" & body_mass_g > 3400')
+```
