--- a/2주차/4팀/2주차_정현엽_과제3.md
+++ b/2주차/4팀/2주차_정현엽_과제3.md
@@ -1,6 +1,6 @@
 # 퀴즈
 
-* 쿼리 함수를 사용하여 타이타닉 데이터셋에서 다음 조건을 만족하는 데이터를 출력하시오.
+* 쿼리 함수를 사용하여 타이타닉 데이터셋에서 다음 조건을 만족하는 데이터를 출력하시오.<br>
   조건) 여자, 1등석, 20세 미만, 살아남음
 
 
