--- a/2주차/5팀/2주차_김민성_과제2.md
+++ b/2주차/5팀/2주차_김민성_과제2.md
@@ -36,3 +36,6 @@ sns.boxplot(x=titanic.Fare);
    1) 1사분위수 Q1 을찾는다.
    2) 3사분위수 Q3을찾는다.
    3) IQR을 계산한다. IQR = Q3 - Q1
+
+# 느낀 점
+이번에 3.1부터 3.3까지 파이썬의 데이터 분석을 진행하며 앞에서 배운 부분을 계속 이해해나가면서 앞으로 할 단원들을 익히는 것이 중요하다고 느꼈다. 따라서 전에 배웠던 내용들을 좀 더 복습해나가면서 이번 단원을 계속 학습해야겠다고 생각하였다.
