--- a/2주차/5팀/2주차_김민성_과제3.md
+++ b/2주차/5팀/2주차_김민성_과제3.md
@@ -37,3 +37,4 @@ import pandas as pd
 titanic = pd.read_csv('titanic.csv')
 titanic.sort_values(by=['age'], ascending=False).head(8)
 ```
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128350167/87138788-93d4-439c-83f2-531850283da9)
