--- a/2주차/5팀/2주차_조예림_과제2.md
+++ b/2주차/5팀/2주차_조예림_과제2.md
@@ -33,4 +33,5 @@ __________________________________________________________
 #### : no_outlier()함수 이용 , ~텔테 기호로 이사값 선택 후 iloc 활용하여 원하는 컬럼의 값으로 저장한다.  
 
 __________________________________________________________
-### 느낀점 : 좀 더 차원이 높은 데이터 분석을 위해 상세한 조건으로 데이터를 추출하고 필터링 할 수 있는 기법을 익힐 수 있어서 좋았다.
+### 느낀점 
+#### : 좀 더 차원이 높은 데이터 분석을 위해 상세한 조건으로 데이터를 추출하고 필터링 할 수 있는 기법을 익힐 수 있어서 좋았다.
