--- a/2주차/5팀/2주차_조예림_과제3.md
+++ b/2주차/5팀/2주차_조예림_과제3.md
@@ -20,9 +20,9 @@
 
 
 ----------------------------------------------------
-### 힌트
-##### 1.notnull 함수 사용
-##### 2.query 함수 사용
+## 힌트
+### 1.notnull 함수 사용
+### 2.query 함수 사용
 -----------------------------------------------------
 
 
