--- a/2주차/5팀/2주차_조예림_과제3.md
+++ b/2주차/5팀/2주차_조예림_과제3.md
@@ -1,5 +1,5 @@
 ### 문제
-#### Age 컬럼에서 결측값을 제외한 데이터만 따로 저장해서 확인하고, 그 표에서만 여성이고 객실등급 1,2등급 나이 33살, 탑승 요금 200이상인 데이터를 추출해보세요. 
+#### Age 컬럼에서 결측값을 제외한 데이터만 따로 저장해서 확인하고, 그 표에서만 여성이고, 객실등급 1,2등급 나이 33살, 탑승 요금 200이상인 데이터를 추출해보세요. 
 ##### 아래와 같은 데이터가 나와야 합니다.
 
 
