--- a/2주차/2팀/2주차_전유진_과제2.md
+++ b/2주차/2팀/2주차_전유진_과제2.md
@@ -1,9 +1,11 @@
+## [느낀점]
 결측값에 대해 배우고 그것을 어떻게 보간하는지 배웠다.
 
 앞으로 데이터 분석이나 머신러닝에 아주 유익하게 쓰일 내용일 것 같다.
 
 다음의 내용이 있다.
 
+##[간단한 Overview]
 1. dropna
 2. interpolate
 3. fillna
