--- a/2주차/2팀/2주차_전유진_과제3.md
+++ b/2주차/2팀/2주차_전유진_과제3.md
@@ -1,7 +1,33 @@
 ### 타이타닉 데이터셋을 불러오고, 다음 문제를 푸시오.
 
 (1) 2개 이상의 칼럼에 결측값을 포함하는 로우를 삭제하여 df1에 저장하시오.
+(2) 'age'의 결측값을 앞 인덱스의 값과 똑같이 채우고, 이를 df2에 저장하시오.
+(3) 'age'의 결측값을 선형보간법을 이용하여 채우고, 이를 df3에 저장하시오.
 
-(2) 결측값을 앞 인덱스의 값과 똑같이 채우고, 이를 df2에 저장하시오.
+import pandas as pd
+df = pd.read_csv('../datasets/titanic.csv')
 
-(3) 결측값을 선형보간법을 이용하여 채우고, 이를 df3에 저장하시오.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 정답
+
+
+df1 = df.dropna(thresh=2)
+df2 = df.Age.fillna(method = 'ffill')
+df3 = df.Age.interpolate(method = 'linear')
