--- a/2주차/2팀/2주차_박신영_과제3.md
+++ b/2주차/2팀/2주차_박신영_과제3.md
@@ -141,13 +141,17 @@ ramens[ramens["Additions"].str.contains("Bacon")]
 코드
 ```python
 ramens.Water.interpolate(method="linear",limit_direction="forward",inplace=True)
-ramens
+```
+혹은
+```python
+ramens.Water.fillna(ramens.Water.mean())
 ```
 결과
 
 
 ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/5c68fb40-a963-4158-b614-e0346cc31185)
-> 적당한 물 양은 550mL과 500mL의 평균인 525mL였습니다!
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/798f5feb-ed04-4af4-b1d7-0f3229bdabb8)
+> 적당한 물의 양은 525mL 혹은 약 516.67mL였습니다!
 
 <br/><br/>
 <br/><br/>
