--- a/2주차/2팀/2주차_박신영_과제3.md
+++ b/2주차/2팀/2주차_박신영_과제3.md
@@ -144,12 +144,12 @@ ramens.Water.interpolate(method="linear",limit_direction="forward",inplace=True)
 ```
 혹은
 ```python
-ramens.Water.fillna(ramens.Water.mean())
+ramens.Water.fillna(ramens.Water.mean(),inplace=True)
 ```
 결과
 
 
-![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/5c68fb40-a963-4158-b614-e0346cc31185)
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/abfe22a9-5c45-4f69-9289-1782a30300d8)
 ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/798f5feb-ed04-4af4-b1d7-0f3229bdabb8)
 > 적당한 물의 양은 525mL 혹은 약 516.67mL였습니다!
 
