--- a/2주차/2팀/2주차_박신영_과제3.md
+++ b/2주차/2팀/2주차_박신영_과제3.md
@@ -159,8 +159,8 @@ ramens.Water.fillna(ramens.Water.mean(),inplace=True)
 
 문제 3 정답:
 ```python
-# lower, upper = q1 - cut_off, q3 + cut_off   # 하한, 상한
-  return print("총 이상값 개수는",data1.shape[0] + data2.shape[0],"이다.")
+lower, upper = q1 - cut_off, q3 + cut_off   # 하한, 상한
+return print("총 이상값 개수는",data1.shape[0] + data2.shape[0],"이다.")
 ```
 
 
