--- a/2주차/1팀/2주차_박광석_과제3.md
+++ b/2주차/1팀/2주차_박광석_과제3.md
@@ -1,6 +1,8 @@
 문제 : seaborn 함수에 내장되어있는 팽귄 데이터셋을 불러오고\
 그 데이터셋에서 암컷이고 몸무게가 3400g 이상인 펭귄데이터를 뽑아보자\
 함수사용은 알잘딱하게 ㅎㅎ\
+펭귄 몸무개 : body_mass_g
+펭귄 성별 : sex
 \
 \
 \
