--- a/3주차 /3팀/3주차_임시현_과제3.md
+++ b/3주차 /3팀/3주차_임시현_과제3.md
@@ -9,7 +9,7 @@
 <details>
   <summary>답</summary>
   <div markdown="1">
-    ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/1e4c8bb6-fe78-4bcf-84be-48d473cc592f)
+    ![das_3_1](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/ee619ebe-ec8c-4719-8499-311c5a79bddb)
 
   </div>
 </details>
@@ -26,7 +26,7 @@
 <details>
   <summary>답</summary>
   <div markdown="1">
-   ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/58102f59-d0e2-4673-9489-5e6efa33ac05)
+    ![das_3_2](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/b770948b-8bfe-400a-9cc1-7b672aa871e8)
 
   </div>
 </details>
