--- a/3주차 /4팀/3주차_이계무_과제2.md
+++ b/3주차 /4팀/3주차_이계무_과제2.md
@@ -1,1 +1,25 @@
-t
+# 3주차 과제
+## 3.4 문자열 데이터 처리
+
+> 판다스에는 2가지 문자열 타입이 있다. object-dtype과 StringDtype인데, 공식 사이트는 StringDtype 사용을 권고하고 있다.
+> dtype 변경을 위해 다음 코드를 사용한다.
+```python
+df.column_name = df.column_name.astype("string")
+```
+
+### 3.4.1 문자열 분리하기
+* 실습에 사용하는 데이터프레임은 titanic
+
+```python
+titanic.Name.str.spilt(pat=" ") # 매개변수 입력 안하면 공백을 기준으로 split, 혹은 pat에 "?"(특정 문자)를 전달해준다.
+```
+
+* split()함수를 이용하여 문자열을 기준 문자에 따라 나눠서 리스트에 저장해준다.
+* expand = True를 이용하면, 가장 긴 문자열의 길이에 맞춰 리스트를 생성해주고, 최대 길이보다 짧은 문자는 빈 셀로 채워진다.
+
+```python
+titanic.Name.str.split().str[1] # 분리된 문자열에서 1번 컬럼에 대해 접근할 수 있다. 이를 통해 Mr./Mrs. 등의 호칭을 얻을 수 있다.
+titanic['title'] = titanic.Name.str.split().str[1] # 이를 새로운 컬럼을 만들어 따로 저장한다.
+```
+
+### 3.4.2 문잣값 교체하기
